# string4parse

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/: string4parse.h
src/: string4parse.cpp
